--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec \"tsx src/main/config/main.ts\"",
     "build": "tsc",
-    "start": "node dist/src/config/main.js",
+    "start": "chcp 65001 > nul && node dist/src/config/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +16,7 @@
   "packageManager": "pnpm@10.17.1",
   "devDependencies": {
     "@types/node": "^24.5.2",
+    "@types/readline-sync": "^1.4.8",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
@@ -24,8 +25,5 @@
   "ts-node": {
     "esm": true,
     "swc": false
-  },
-  "dependencies": {
-    "prompt-sync": "^4.2.0"
   }
 }
